<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.buffup.app.ui.streamactivity.streamlist.StreamListFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/stream_list_header_bg"
            android:paddingStart="24dp"
            android:paddingTop="36dp"
            android:paddingEnd="24dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streams"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleText"
                android:text="@string/participate_on_this_live_events"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/streamsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/emptyLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_empty_state"
            android:drawablePadding="16dp"
            android:gravity="center"
            android:text="@string/no_streams_yet"
            android:textColor="@color/frenchGray"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
